plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'org.flywaydb.flyway' version '10.13.0'
	id 'io.freefair.lombok' version '6.5.1'
}

group = 'com.brunosouza'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.13.0'
	runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.13.0'
	implementation 'org.postgresql:postgresql:42.2.16'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.11.0'
//	implementation 'org.springframework.boot:spring-boot-starter-security'

}

tasks.named('test') {
	useJUnitPlatform()
}

// Flyway Configuration
flyway {
	url = 'jdbc:postgresql://localhost:5432/payflow'
	user = 'admin'
	password = 'admin'
	locations = ['filesystem:src/main/resources/db/migration'] // Localização dos scripts de migração
}
